--- a/VagesHAR/configs/train_inlab_test_stroke.cfg
+++ b/VagesHAR/configs/train_inlab_test_stroke.cfg
@@ -13,25 +13,25 @@ activities_to_keep = 1, 2, 6, 7, 8, 10, 13
 relabel_dict = 4, 1; 5, 1; 11, 10; 20, 8; 21, 8; 22, 8; 23, 8
 
 [left_thigh]
-train_data_sets = out_of_lab
-train_sensor_codewords = LOWERBACK, THIGH
+train_data_sets = inlab_dataset
+train_sensor_codewords = BACK, THIGH
 test_data_sets = stroke_patients
 test_sensor_codewords = LB, LT
 
 [right_thigh]
-train_data_sets = out_of_lab
-train_sensor_codewords = LOWERBACK, THIGH
+train_data_sets = inlab_dataset
+train_sensor_codewords = BACK, THIGH
 test_data_sets = stroke_patients
 test_sensor_codewords = LB, RT
 
 [unaffected_thigh]
-train_data_sets = out_of_lab
-train_sensor_codewords = LOWERBACK, THIGH
+train_data_sets = inlab_dataset
+train_sensor_codewords = BACK, THIGH
 test_data_sets = stroke_patients
 test_sensor_codewords = LB, UT
 
 [affected_thigh]
-train_data_sets = out_of_lab
-train_sensor_codewords = LOWERBACK, THIGH
+train_data_sets = inlab_dataset
+train_sensor_codewords = BACK, THIGH
 test_data_sets = stroke_patients
 test_sensor_codewords = LB, AT
